[fix] security